--- a/backend/config/database.yml
+++ b/backend/config/database.yml
@@ -20,22 +20,45 @@ test:
   <<: *default
   database: storage/test.sqlite3
 
-
 # Store production database in the storage/ directory, which by default
 # is mounted as a persistent Docker volume in config/deploy.yml.
 production:
   primary:
-    <<: *default
-    database: storage/production.sqlite3
+    adapter: mysql2
+    encoding: utf8mb4
+    pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+    database: <%= ENV.fetch("MYSQL_DATABASE", "sushi_app_production") %>
+    username: <%= ENV.fetch("MYSQL_USER", "root") %>
+    password: <%= ENV.fetch("MYSQL_PASSWORD", "") %>
+    host: <%= ENV.fetch("MYSQL_HOST", "db") %>
+    port: <%= ENV.fetch("MYSQL_PORT", 3306) %>
   cache:
-    <<: *default
-    database: storage/production_cache.sqlite3
+    adapter: mysql2
+    encoding: utf8mb4
+    pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+    database: <%= ENV.fetch("MYSQL_DATABASE", "sushi_app_production_cache") %>
+    username: <%= ENV.fetch("MYSQL_USER", "root") %>
+    password: <%= ENV.fetch("MYSQL_PASSWORD", "") %>
+    host: <%= ENV.fetch("MYSQL_HOST", "db") %>
+    port: <%= ENV.fetch("MYSQL_PORT", 3306) %>
     migrations_paths: db/cache_migrate
   queue:
-    <<: *default
-    database: storage/production_queue.sqlite3
+    adapter: mysql2
+    encoding: utf8mb4
+    pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+    database: <%= ENV.fetch("MYSQL_DATABASE", "sushi_app_production_queue") %>
+    username: <%= ENV.fetch("MYSQL_USER", "root") %>
+    password: <%= ENV.fetch("MYSQL_PASSWORD", "") %>
+    host: <%= ENV.fetch("MYSQL_HOST", "db") %>
+    port: <%= ENV.fetch("MYSQL_PORT", 3306) %>
     migrations_paths: db/queue_migrate
   cable:
-    <<: *default
-    database: storage/production_cable.sqlite3
+    adapter: mysql2
+    encoding: utf8mb4
+    pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+    database: <%= ENV.fetch("MYSQL_DATABASE", "sushi_app_production_cable") %>
+    username: <%= ENV.fetch("MYSQL_USER", "root") %>
+    password: <%= ENV.fetch("MYSQL_PASSWORD", "") %>
+    host: <%= ENV.fetch("MYSQL_HOST", "db") %>
+    port: <%= ENV.fetch("MYSQL_PORT", 3306) %>
     migrations_paths: db/cable_migrate
