--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -82,6 +82,32 @@ jobs:
         name: frontend-coverage
         path: frontend/coverage/
 
+  docker-build:
+    name: Docker Build Test
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+    
+    - name: Build Backend Docker Image
+      run: |
+        cd backend
+        docker build -f Dockerfile.dev -t sushi-backend:test .
+    
+    - name: Build Frontend Docker Image
+      run: |
+        cd frontend
+        docker build -f Dockerfile.dev -t sushi-frontend:test .
+    
+    - name: Test Docker Compose
+      run: |
+        docker-compose -f docker-compose.yml config
+        echo "✅ Docker Compose configuration is valid"
+
   integration-test:
     name: Integration Tests
     runs-on: ubuntu-latest
@@ -130,6 +156,32 @@ jobs:
         curl -f http://localhost:4000/api/v1/hello || exit 1
         echo "✅ API connectivity test passed"
 
+  security-scan:
+    name: Security Scan
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    
+    - name: Setup Ruby
+      uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: ${{ env.RUBY_VERSION }}
+        bundler-cache: true
+        working-directory: ./backend
+    
+    - name: Run Brakeman Security Scan
+      run: bundle exec brakeman --no-progress --format json --output brakeman-report.json
+      working-directory: ./backend
+      continue-on-error: true
+    
+    - name: Upload Security Report
+      uses: actions/upload-artifact@v4
+      with:
+        name: security-report
+        path: backend/brakeman-report.json
+
   lint:
     name: Code Quality & Linting
     runs-on: ubuntu-latest
@@ -165,30 +217,52 @@ jobs:
       run: npm run lint
       working-directory: ./frontend
 
-  deploy:
-    name: Deploy Application
+  deploy-staging:
+    name: Deploy to Staging
     runs-on: ubuntu-latest
-    needs: [test-backend, test-frontend, integration-test, lint]
+    needs: [test-backend, test-frontend, integration-test, lint, docker-build]
+    if: github.ref == 'refs/heads/develop' && github.event_name == 'push'
+    environment: staging
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    
+    - name: Deploy to Staging
+      env:
+        DEPLOY_HOST: ${{ secrets.DEPLOY_HOST }}
+        DEPLOY_USER: ${{ secrets.DEPLOY_USER }}
+        DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
+      run: |
+        chmod +x scripts/deploy.sh
+        ./scripts/deploy.sh staging
+
+  deploy-production:
+    name: Deploy to Production
+    runs-on: ubuntu-latest
+    needs: [test-backend, test-frontend, integration-test, lint, docker-build, security-scan]
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    environment: production
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
     
     - name: Deploy to Production
+      env:
+        DEPLOY_HOST: ${{ secrets.DEPLOY_HOST }}
+        DEPLOY_USER: ${{ secrets.DEPLOY_USER }}
+        DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
       run: |
-        echo "🚀 Deploying to production..."
-        echo "✅ Backend tests passed!"
-        echo "✅ Frontend tests passed!"
-        echo "✅ Integration tests passed!"
-        echo "✅ Code quality checks passed!"
-        echo "🎉 Ready for deployment!"
-        # ここに実際のデプロイメントスクリプトを追加
+        chmod +x scripts/deploy.sh
+        ./scripts/deploy.sh production
     
     - name: Deployment Summary
       run: |
-        echo "## Deployment Summary" >> $GITHUB_STEP_SUMMARY
+        echo "## Production Deployment Summary" >> $GITHUB_STEP_SUMMARY
         echo "- Backend: ✅ Tests passed" >> $GITHUB_STEP_SUMMARY
         echo "- Frontend: ✅ Tests passed" >> $GITHUB_STEP_SUMMARY
         echo "- Integration: ✅ API connectivity verified" >> $GITHUB_STEP_SUMMARY
+        echo "- Security: ✅ Brakeman scan completed" >> $GITHUB_STEP_SUMMARY
+        echo "- Docker: ✅ Builds successful" >> $GITHUB_STEP_SUMMARY
         echo "- Quality: ✅ Linting completed" >> $GITHUB_STEP_SUMMARY 
