--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -105,7 +105,7 @@ jobs:
     
     - name: Test Docker Compose
       run: |
-        docker-compose -f docker-compose.yml config
+        docker compose -f docker-compose.yml config
         echo "✅ Docker Compose configuration is valid"
 
   integration-test:
@@ -222,7 +222,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [test-backend, test-frontend, integration-test, lint, docker-build]
     if: github.ref == 'refs/heads/develop' && github.event_name == 'push'
-    environment: staging
+    # environment: 'staging'
     
     steps:
     - name: Checkout code
@@ -242,7 +242,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [test-backend, test-frontend, integration-test, lint, docker-build, security-scan]
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-    environment: production
+    # environment: 'production'
     
     steps:
     - name: Checkout code
