feat: Implement comprehensive authentication system with JWT support
- Add 5 types of authentication methods (standard, OAuth2, 2FA, LDAP)
- Implement JWT authentication for API endpoints
- Add public/private API classification
- Create authentication configuration system
- Add frontend authentication context and API client
- Update all comments to English
- Exclude sensitive CSV data from version control
- Add database migrations for new authentication features

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ backend/config/master.key
 backend/coverage/*
 backend/vendor/bundle/*
 
+# Database and CSV data (contains sensitive information)
+backend/db/csv_data/
+
 # Frontend (Next.js)
 frontend/node_modules/
 frontend/.next/
