--- a/env.example
+++ b/env.example
@@ -14,4 +14,24 @@ NEXT_PUBLIC_API_URL=http://localhost:4050
 
 # Port Configuration
 BACKEND_PORT=4050
-FRONTEND_PORT=4051 
+FRONTEND_PORT=4051
+
+# LDAP Configuration (for bfabric LDAP)
+LDAP_HOST=fgcz-bfabric-ldap
+LDAP_PORT=636
+LDAP_ATTRIBUTE=cn
+LDAP_BASE=dc=bfabric,dc=org
+LDAP_SSL=true
+LDAP_SSL_VERIFY=true
+
+# OAuth2 Configuration
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+GITHUB_CLIENT_ID=your_github_client_id
+GITHUB_CLIENT_SECRET=your_github_client_secret
+
+# Wallet Configuration
+ETHEREUM_NETWORK=mainnet
+
+# JWT Configuration
+JWT_SECRET_KEY=your_jwt_secret_key_here 
