--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -42,6 +42,24 @@ if File.exist?("/usr/local/ngseq/gems/devise_ldap_authenticatable_forked_2019071
   gem 'devise_ldap_authenticatable', '>= 0.8.6.1', :path => '/usr/local/ngseq/gems/devise_ldap_authenticatable_forked_20190712'
 end
 
+# OAuth2 authentication
+gem 'omniauth', '~> 2.1'
+gem 'omniauth-google-oauth2', '~> 1.1'
+gem 'omniauth-github', '~> 2.0'
+gem 'omniauth-rails_csrf_protection', '~> 1.0'
+
+# Two-factor authentication
+gem 'devise-two-factor', '~> 6.0'
+gem 'rotp', '~> 6.2'
+
+# Wallet authentication (commented out due to Ruby 3.3.7 compatibility issues)
+# gem 'ethereum.rb', '~> 2.0'
+# gem 'web3-eth', '~> 0.2'
+
+# JWT authentication
+gem 'jwt', '~> 2.7'
+gem 'devise-jwt', '~> 0.9'
+
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem "debug", platforms: %i[ mri windows ], require: "debug/prelude"
