--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,13 @@ services:
     environment:
       - RAILS_ENV=development
       - RAILS_SERVE_STATIC_FILES=true
+      # LDAP Configuration (bfabric)
+      - LDAP_HOST=${LDAP_HOST:-fgcz-bfabric-ldap}
+      - LDAP_PORT=${LDAP_PORT:-636}
+      - LDAP_ATTRIBUTE=${LDAP_ATTRIBUTE:-cn}
+      - LDAP_BASE=${LDAP_BASE:-dc=bfabric,dc=org}
+      - LDAP_SSL=${LDAP_SSL:-true}
+      - LDAP_SSL_VERIFY=${LDAP_SSL_VERIFY:-true}
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails db:migrate && bundle exec rails server -b 0.0.0.0"
 
   frontend:
