--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,11 +27,13 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/testing-library__jest-dom": "^5.14.9",
+    "@babel/core": "^7.25.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^30.0.0-beta.3",
+    "jest-environment-jsdom": "^29.7.0",
+    "babel-jest": "^29.7.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
