Fixed  start-dev.sh, confirmed it worked on h37 native

--- a/backend/config/authentication.yml
+++ b/backend/config/authentication.yml
@@ -76,5 +76,10 @@ test:
   skip_endpoints:
     - "/api/v1/hello"
 
+development:
+  <<: *defaults
+  ldap_auth:
+    enabled: false
+ 
 production:
   <<: *defaults 
