chore(devops): rename compose files; add ENABLE_LDAP; update scripts/CI/docs
- Rename docker-compose* → compose.{dev,prod}.yml
- docker-dev.sh: use sudo+docker compose, default ENABLE_LDAP=0, reference compose.dev.yml
- Backend Dockerfiles: gate LDAP gem via ENABLE_LDAP (install when 1, exclude otherwise)
- Gemfile: enable local-path ldap gem only when ENABLE_LDAP=1 and path exists
- CI/Deploy: update to new compose names; docs: add ENABLE_LDAP usage and notes

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -103,10 +103,11 @@ jobs:
         cd frontend
         docker build -f Dockerfile.dev -t sushi-frontend:test .
     
-    - name: Test Docker Compose
+    - name: Test Docker Compose (dev/prod)
       run: |
-        docker compose -f docker-compose.yml config
-        echo "✅ Docker Compose configuration is valid"
+        docker compose -f compose.dev.yml config
+        docker compose -f compose.prod.yml config
+        echo "✅ Docker Compose configurations (dev/prod) are valid"
 
   integration-test:
     name: Integration Tests
