--- a/compose.dev.yml
+++ b/compose.dev.yml
@@ -5,6 +5,8 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile.dev
+      args:
+        - ENABLE_LDAP=${ENABLE_LDAP:-0}
     platform: linux/amd64
     ports:
       - "${BACKEND_PORT:-4050}:3000"
@@ -36,8 +38,12 @@ services:
       - /app/.next
     environment:
       - NODE_ENV=development
+      - NEXT_PUBLIC_API_URL=http://${DEV_HOST:-localhost}:${BACKEND_PORT:-4050}
+      - NEXT_PUBLIC_API_PORT=${BACKEND_PORT:-4050}
     depends_on:
       - backend
+    command: ["npm", "run", "dev", "--", "--hostname", "0.0.0.0"]
 
 volumes:
-  bundle_cache: 
+  bundle_cache:
+
