--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -5,6 +5,8 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
+      args:
+        - ENABLE_LDAP=${ENABLE_LDAP:-0}
     ports:
       - "${BACKEND_PORT:-4050}:80"
     environment:
@@ -51,4 +53,5 @@ services:
 
 volumes:
   backend_storage:
-  mysql_data: 
+  mysql_data:
+
