--- a/compose.dev.ldap.yml
+++ b/compose.dev.ldap.yml
@@ -7,9 +7,8 @@ services:
       - ./docker_files/FGCZ_CA_2019.crt:/usr/local/share/ca-certificates/FGCZ_CA_2019.crt:ro
     environment:
       - ENABLE_LDAP=${ENABLE_LDAP:-1}
-      - SSL_CERT_FILE=/usr/local/share/ca-certificates/FGCZ_CA_2019.crt
     command: >
-      bash -c "rm -f tmp/pids/server.pid && \
+      bash -c "update-ca-certificates || true && git config --global --add safe.directory /usr/local/ngseq/gems/devise_ldap_authenticatable_forked_20190712 && rm -f tmp/pids/server.pid && \
                if [ \"${ENABLE_LDAP}\" = \"1\" ]; then bundle install --with ldap; else bundle install; fi && \
                bundle exec rails db:migrate && \
                bundle exec rails server -b 0.0.0.0"
