--- a/compose.dev.yml
+++ b/compose.dev.yml
@@ -23,7 +23,11 @@ services:
       - LDAP_BASE=${LDAP_BASE:-dc=bfabric,dc=org}
       - LDAP_SSL=${LDAP_SSL:-true}
       - LDAP_SSL_VERIFY=${LDAP_SSL_VERIFY:-true}
-    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails db:migrate && bundle exec rails server -b 0.0.0.0"
+    command: >
+      bash -c "rm -f tmp/pids/server.pid && \
+               bundle check || BUNDLE_WITHOUT=ldap bundle install && \
+               bundle exec rails db:migrate && \
+               bundle exec rails server -b 0.0.0.0"
 
   frontend:
     build:
