--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -148,11 +148,13 @@ jobs:
       uses: hadolint/hadolint-action@v3.1.0
       with:
         dockerfile: backend/Dockerfile.dev
+        failure-threshold: error
 
     - name: Lint Frontend Dockerfile with hadolint
       uses: hadolint/hadolint-action@v3.1.0
       with:
         dockerfile: frontend/Dockerfile.dev
+        failure-threshold: error
     
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
