docs(api): add Swagger UI (/api-docs) and initial OpenAPI spec

--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -66,6 +66,11 @@ gem 'rotp', '~> 6.2'
 gem 'jwt', '~> 2.7'
 gem 'devise-jwt', '~> 0.9'
 
+# API documentation (Swagger/OpenAPI)
+group :development do
+  gem 'rswag', '~> 2.13'
+end
+
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem "debug", platforms: %i[ mri windows ], require: "debug/prelude"
