--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,9 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.87.4",
+    "@types/jquery": "^3.5.33",
+    "jquery": "^3.7.1",
+    "jstree": "^3.3.17",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
