--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,10 @@
     "jstree": "^3.3.17",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-markdown": "^10.1.0",
+    "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.0",
