Added csv lib in Gemfile

--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -25,6 +25,9 @@ gem "solid_cable"
 # Reduces boot times through caching; required in config/boot.rb
 gem "bootsnap", require: false
 
+# CSV library (required as of Ruby 3.4.0)
+gem "csv"
+
 # Deploy this application anywhere as a Docker container [https://kamal-deploy.org]
 gem "kamal", require: false
 
